--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -209,6 +209,10 @@
                 letter-spacing: -1px;  
             }
         }
+
+        a.active {
+            color: #F9C98C;
+        }
     }
 
     // .pagination__next
