--- a/src/scss/vacancies.scss
+++ b/src/scss/vacancies.scss
@@ -80,6 +80,11 @@
                  height: auto; 
             }
         }
+
+        span {
+            @include adaptiveValue("margin-right", 26, 18);
+            display: inline-block;
+        }
     }
 
     // .announcement__action
