--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -191,9 +191,11 @@
         border: 1px solid rgba(30, 30, 30, 0.03);
         position: relative;
         z-index: 1;
+        height: 276px;
 
         @media (max-width:$mobile){
             border-radius: 0 0 22px 22px; 
+            height: auto;
         }
     }
 
@@ -249,7 +251,7 @@
         line-height: normal;
         letter-spacing: -1px;
         text-decoration: underline;
-        margin-top: 10px;
+        margin-top: auto;
         transition: all 0.25s ease;
 
         @media (max-width:$mobile){
