--- a/src/scss/certificates.scss
+++ b/src/scss/certificates.scss
@@ -89,11 +89,21 @@
 }
 
 .certificat {
-   background: #fff;
    border-radius: 40px;
    height: 340px;
 
    @media (max-width: $mobile) {
       border-radius: 22px;
+   }
+
+   &__img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 40px;
+
+      @media (max-width: $mobile) {
+         border-radius: 22px;
+      }
    }
 }
