--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -104,18 +104,55 @@
     flex-direction: column;
     justify-content: space-between;
 
-    &:nth-child(2) {
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        z-index: 1;
+    }
+
+    &:nth-child(even) {
         .post__tags {
             align-items: flex-end;
             padding-right: 30px;
-
-            // @media (max-width: toEm(1440)) {
-            //     padding-right: 0; 
-            // }
-
             @media (max-width:$tablet){
                 padding-right: 20px;
             }
+
+            @media (max-width:$mobile){
+                padding-right: 0;
+                padding-left: 20px;
+                align-items: flex-start;
+            }
+        }
+
+        &:before {
+            background: url('../img/blog/mask2.webp');
+            background-size: contain;
+            background-position: top right;
+            background-repeat: no-repeat;
+
+            @media (max-width:$mobile){
+                background: url('../img/blog/mask1.webp');
+                background-size: contain;
+                background-position: top left;
+                background-repeat: no-repeat;
+            }
+        }
+    }
+
+    &:nth-child(odd) {
+        &:before {
+            background: url('../img/blog/mask1.webp');
+            background-size: contain;
+            background-position: top left;
+            background-repeat: no-repeat;
         }
     }
 
@@ -138,9 +175,6 @@
         z-index: 2;
         padding-left: 30px;
 
-        @media (max-width: toEm(1440)){
-            padding-left: 0;  
-        }
 
         @media (max-width:$tablet){
             padding-left: 20px;
@@ -186,7 +220,7 @@
         -webkit-backdrop-filter: blur(11.5px);
         border: 1px solid rgba(30, 30, 30, 0.03);
         position: relative;
-        z-index: 1;
+        z-index: 10;
         height: 276px;
 
         @media (max-width:$mobile){
@@ -259,15 +293,21 @@
         }
     }
 
+
     &__image {
         position: absolute;
         top: 0;
         left: 0;
-        right: 0;
-        bottom: 0;
         width: 100%;
         height: 100%;
+        object-fit: cover;
+        border-radius: 40px;
+
+        @media (max-width:$mobile){
+            border-radius: 22px; 
+        }
     }
+
 }
 
 .filters-wrap {
@@ -404,3 +444,4 @@
         @include adaptiveValue("margin-right", 40, 10);
     }
 }
+
