--- a/src/scss/work_performed.scss
+++ b/src/scss/work_performed.scss
@@ -91,6 +91,7 @@
     grid-template-areas: 'card_1 card_3 card_3'
                          'card_2 card_4 card_5';
     grid-template-columns: 487px 1fr 1fr;
+    
 
     &.archive-portfolio {
         grid-template-areas: 'card_1 card_3 card_3'
@@ -137,6 +138,17 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            
+        }
 
         // .work__card_1
         &_1 {
@@ -212,6 +224,13 @@
             height: 372px;
             grid-area: card_3;
 
+            &:after {
+                background: url('../img/performed/mask_desc.webp');
+                background-size: contain;
+                background-position: top left;
+                background-repeat: no-repeat;
+            }
+
             @media (max-width:$mobile){
                 height: 330px; 
             }
@@ -222,7 +241,8 @@
                 right: unset;
 
                 @media (max-width:$mobile){
-                    left: 56px;   
+                    left: unset;  
+                    right: 12px; 
                 }
 
                 @media (max-width:$mobileSmall){
@@ -244,13 +264,21 @@
                 height: 330px; 
             }
 
+            &:after {
+                background: url('../img/performed/mask_desc.webp');
+                background-size: contain;
+                background-position: top left;
+                background-repeat: no-repeat;
+            }
+
             .work__link {
                 top: 4px;
                 left: 76px;
                 right: unset;
 
                 @media (max-width:$mobile){
-                    left: 56px;   
+                    left: unset;  
+                    right: 12px; 
                 }
 
                 @media (max-width:$mobileSmall){
@@ -316,7 +344,16 @@
             .work__title {
                 max-width: 266px;
             }
-        }   
+        }  
+        
+        &:after {
+            @media (max-width:$mobile){
+                background: url('../img/performed/mask_mob.webp');
+                background-size: contain;
+                background-position: top right ;
+                background-repeat: no-repeat ;
+            }
+        }
     }
 
     // .work__link
