tried edits from the customer

--- a/src/scss/base/popup.scss
+++ b/src/scss/base/popup.scss
@@ -50,12 +50,28 @@ body::after {
 	visibility: hidden;
 	transform: scale(0);
 	transition: transform 0.3s ease 0s;
-	background-color: #eee;
+	background: #D6D6D6;
 	padding: 20px;
 	width: 100%;
-	max-width: 900px;
+	max-width: 1230px;
 	border-radius: 20px;
 	.lock & {
 		visibility: visible;
+	}
+}
+
+.popup__close {
+	display: block;
+	margin-left: auto;
+
+	path {
+		stroke: #000;
+		transition: stroke 0.3s ease 0s;
+	}
+
+	&:hover {
+		path {
+			stroke: #f9c98c;
+		}
 	}
 }
