--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -1,7 +1,7 @@
 .hero {
     position: relative;
     border-radius: 40px;
-    @include adaptiveValue("padding-top", 138, 104);
+    @include adaptiveValue("padding-top", 138, 80);
     @include adaptiveValue("padding-bottom", 90, 60);
 
     @media (max-width:$mobile){
@@ -62,8 +62,10 @@
         @media (max-width:$mobile){
             margin-top: 30px;  
             height: auto; 
+            min-height: unset;
         }
     }
+
 
     // .hero__link
     &__link {
@@ -172,6 +174,7 @@
              justify-content: flex-end;
              margin-bottom: 20px; 
              margin-top: 24px;
+             gap: 0;
         }
 
         @media (max-width:$mobileSmall){
